--- a/src/app/pages/questionario/questionario.component.css
+++ b/src/app/pages/questionario/questionario.component.css
@@ -3,6 +3,11 @@ margin-right: auto;
 margin-left: auto;
 width: 450px;
 }
+.center-large {
+    margin-right: auto;
+    margin-left: auto;
+    width: 750px;
+}
 
 button {
     margin-right: 5px;
